docs: Updating author value.

--- a/v1/package.json
+++ b/v1/package.json
@@ -7,7 +7,7 @@
     "type": "git"
   },
   "scripts": {},
-  "author": "Cloud Platforms",
+  "author": "Warner Media, LLC",
   "license": "MIT",
   "dependencies": {
     "github-api": "^3.4.0",
